--- a/target-ar-sample/src/main/res/layout/main_fragment.xml
+++ b/target-ar-sample/src/main/res/layout/main_fragment.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/grey"
     tools:context=".ui.fragments.main.MainFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/dimen_activity_edge"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent">
 
-</FrameLayout>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_activity_edge"
+        app:cornerRadius="@dimen/dimen_corner_round"
+        android:contentDescription="@string/button_label_scanartarget"
+        android:text="@string/button_label_scanartarget"
+        android:id="@+id/scanButton"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_activity_edge"
+        app:cornerRadius="@dimen/dimen_corner_round"
+        android:contentDescription="@string/button_label_user"
+        android:text="@string/button_label_user"
+        android:id="@+id/userButton"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/button_label_dev_tools"
+        app:cornerRadius="@dimen/dimen_corner_round"
+        android:text="@string/button_label_dev_tools"
+        android:id="@+id/devToolsButton"/>
+</androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
