IAR-4896 Use BaseFragment and BaseViewModel to handle navigation

--- a/core-sample/src/main/res/layout/main_fragment.xml
+++ b/core-sample/src/main/res/layout/main_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/grey"
-    tools:context=".ui.fragments.MainFragment">
+    tools:context=".ui.fragments.main.MainFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="0dp"
