--- a/core-sample/src/main/res/navigation/nav_graph.xml
+++ b/core-sample/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.iar.core_sample.ui.fragments.MainFragment"
+        android:name="com.iar.core_sample.ui.fragments.main.MainFragment"
         android:label="main_fragment"
         tools:layout="@layout/main_fragment" />
 </navigation>
