IAR-4897 Create User Management screen and submenus (Migrate User/Create User/Login)

--- a/core-sample/src/main/res/navigation/nav_graph.xml
+++ b/core-sample/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,22 @@
         android:id="@+id/mainFragment"
         android:name="com.iar.core_sample.ui.fragments.main.MainFragment"
         android:label="main_fragment"
-        tools:layout="@layout/main_fragment" />
+        tools:layout="@layout/main_fragment">
+        <action
+            android:id="@+id/action_mainFragment_to_userManagementFragment"
+            app:destination="@id/userManagementFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/userManagementFragment"
+        android:name="com.iar.core_sample.ui.fragments.usermanagement.UserManagementFragment"
+        android:label="user_management_fragment"
+        tools:layout="@layout/user_management_fragment" >
+        <argument
+            android:name="OrgKey"
+            app:argType="string" />
+        <argument
+            android:name="Region"
+            app:argType="string" />
+    </fragment>
+
 </navigation>
