--- a/core-sample/src/main/res/values/dimens.xml
+++ b/core-sample/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen_activity_edge">24dp</dimen>
     <dimen name="dimen_corner_round">50dp</dimen>
+    <dimen name="corner_radius_small">6dp</dimen>
 </resources>
