--- a/target-ar-sample/src/main/res/values/dimens.xml
+++ b/target-ar-sample/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen_activity_edge">24dp</dimen>
     <dimen name="dimen_corner_round">50dp</dimen>
+    <dimen name="dimen_button_20">20dp</dimen>
 </resources>
