--- a/core-sample/src/main/res/layout/reward_item.xml
+++ b/core-sample/src/main/res/layout/reward_item.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reward_image"
         app:layout_constraintTop_toTopOf="@+id/reward_image" />
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textColor="@color/darkGrey"
+        android:textColor="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="@+id/reward_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reward_image"
