--- a/core-sample/src/main/res/layout/user_rewards_fragment.xml
+++ b/core-sample/src/main/res/layout/user_rewards_fragment.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sampleApp_darkBlue"
+    android:orientation="vertical"
     tools:context=".ui.fragments.rewards.UserRewardsFragment">
+
+    <Button
+        android:id="@+id/get_reward_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background = "@drawable/round_long_button"
+        android:textSize = "13sp"
+        android:text="Get User Reward by ID"
+        android:layout_margin="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reward_list"
@@ -12,4 +23,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
