--- a/core-sample/src/main/res/navigation/nav_graph.xml
+++ b/core-sample/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_mainFragment_to_userManagementFragment"
             app:destination="@id/userManagementFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_ARHuntsFragment"
+            app:destination="@id/ARHuntsFragment" />
     </fragment>
     <fragment
         android:id="@+id/userManagementFragment"
@@ -21,5 +24,10 @@
         tools:layout="@layout/user_management_fragment" >
 
     </fragment>
+    <fragment
+        android:id="@+id/ARHuntsFragment"
+        android:name="com.iar.core_sample.ui.fragments.arhunts.ARHuntsFragment"
+        android:label="ar_hunts_fragment"
+        tools:layout="@layout/ar_hunts_fragment" />
 
 </navigation>
