--- a/core-sample/src/main/res/layout/reward_item.xml
+++ b/core-sample/src/main/res/layout/reward_item.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/lightGrey"
+        android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="@+id/reward_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reward_image"
