--- a/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
@@ -1,14 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.arhunts.HuntRewardsFragment">
+    android:background="@color/sampleApp_darkBlue"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".ui.fragments.arhunts.HuntRewardDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hunt reward fragment" />
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/rewardTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:text="@string/reward"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/rewardImage"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_below="@id/rewardTitle"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/splash_icon"
+            android:contentDescription="@string/reward">
+        </ImageView>
+
+        <TextView
+            android:id="@+id/rewardName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rewardTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="8dp"
+            android:layout_toEndOf="@id/rewardImage"
+            android:textColor="@color/lightGrey"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            tools:text="Reward Name" />
+
+        <TextView
+            android:id="@+id/rewardType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rewardName"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="8dp"
+            android:layout_toEndOf="@id/rewardImage"
+            android:textColor="@color/lightGrey"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            tools:text="Reward Name" />
+
+        <TextView
+            android:id="@+id/rewardId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rewardType"
+            android:layout_margin="8dp"
+            android:layout_toEndOf="@id/rewardImage"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:textColor="@color/lightGrey"
+            android:textSize="13sp"
+            tools:text="Reward Id" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/huntRewardDataTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:text="@string/huntreward_data"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/huntRewardData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textColor="@color/lightGrey">
+    </TextView>
+
+</LinearLayout>
+
