--- a/core-sample/src/main/res/layout/fragment_marker_details.xml
+++ b/core-sample/src/main/res/layout/fragment_marker_details.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sampleApp_darkBlue"
     tools:context=".ui.fragments.markers.MarkerDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/marker_data"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Marker detail fragment" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/white" />
 
-</FrameLayout>
+</ScrollView>
