--- a/core-sample/src/main/res/layout/fragment_hunt_markers.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_markers.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/sampleApp_darkBlue"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".ui.fragments.arhunts.HuntMarkersFragment">
 
     <RelativeLayout
@@ -18,13 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_margin="16dp"
             android:gravity="center"
+            android:text="@string/clue_card"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:text="@string/clue_card" />
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/clueCardImage"
@@ -32,8 +31,8 @@
             android:layout_height="75dp"
             android:layout_below="@id/clueCardTitle"
             android:layout_marginStart="16dp"
-            android:src="@drawable/splash_icon"
-            android:contentDescription="@string/clue_card">
+            android:contentDescription="@string/clue_card"
+            android:src="@drawable/splash_icon">
         </ImageView>
 
         <TextView
@@ -70,17 +69,23 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
+        android:text="@string/huntmarker_data"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:text="@string/huntmarker_data" />
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/huntMarkerData"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:textColor="@color/lightGrey">
-    </TextView>
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:id="@+id/huntMarkerData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textColor="@color/lightGrey">
+        </TextView>
+    </ScrollView>
 
 </LinearLayout>
