--- a/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
+++ b/core-sample/src/main/res/layout/fragment_hunt_rewards.xml
@@ -18,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_margin="16dp"
             android:gravity="center"
             android:text="@string/reward"
             android:textColor="@color/white"
@@ -32,8 +31,8 @@
             android:layout_height="75dp"
             android:layout_below="@id/rewardTitle"
             android:layout_marginStart="16dp"
-            android:src="@drawable/splash_icon"
-            android:contentDescription="@string/reward">
+            android:contentDescription="@string/reward"
+            android:src="@drawable/splash_icon">
         </ImageView>
 
         <TextView
@@ -88,13 +87,19 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/huntRewardData"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:textColor="@color/lightGrey">
-    </TextView>
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:id="@+id/huntRewardData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textColor="@color/lightGrey">
+        </TextView>
+    </ScrollView>
 
 </LinearLayout>
 
