--- a/core-sample/src/main/res/layout/user_management_fragment.xml
+++ b/core-sample/src/main/res/layout/user_management_fragment.xml
@@ -53,6 +53,7 @@
             android:background="@drawable/round_rect_small"
             android:textSize="14sp"
             android:padding="10dp"
+            android:textColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/settingsMessage" />
