--- a/core-sample/src/main/res/layout/fragment_location_markers.xml
+++ b/core-sample/src/main/res/layout/fragment_location_markers.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sampleApp_darkBlue"
+    android:orientation="vertical"
     tools:context=".ui.fragments.markers.LocationMarkersFragment">
 
-
-    <TextView
+    <Button
+        android:id="@+id/get_marker_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Location marker Fragment" />
+        android:layout_height="wrap_content"
+        android:background = "@drawable/round_long_button"
+        android:textSize = "13sp"
+        android:text="Get Location Markers"
+        android:layout_margin="16dp" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/location_marker_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </androidx.recyclerview.widget.RecyclerView>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
