--- a/surface-ar-sample/src/main/res/values/colors.xml
+++ b/surface-ar-sample/src/main/res/values/colors.xml
@@ -10,10 +10,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
     <color name="grey">#595959</color>
+
+    <color name="sampleApp_greyBlue">#415787</color>
+    <color name="sampleApp_darkBlue">#004781</color>
+    <color name="sampleApp_lightBlue">#80c3f2</color>
+    <color name="transparent">#00000000</color>
+
+    <color name="darkGrey">#404040</color>
+    <color name="lightGrey">#B0B0B0</color>
 </resources>
