--- a/target-ar-sample/src/main/res/layout/fragment_main.xml
+++ b/target-ar-sample/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/grey"
+    android:background="@color/sampleApp_darkBlue"
     tools:context=".ui.fragments.main.MainFragment">
 
 <androidx.appcompat.widget.LinearLayoutCompat
