--- a/surface-ar-sample/src/main/res/values/colors.xml
+++ b/surface-ar-sample/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="sampleApp_darkBlue">#004781</color>
     <color name="sampleApp_lightBlue">#80c3f2</color>
     <color name="transparent">#00000000</color>
+    <color name="transparentGrey">#BE000000</color>
 
     <color name="darkGrey">#404040</color>
     <color name="lightGrey">#B0B0B0</color>
