--- a/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
+++ b/surface-ar-sample/src/main/res/layout/location_markers_fragment.xml
@@ -1,25 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sampleApp_darkBlue"
-    android:orientation="vertical"
-    tools:context=".ui.fragments.markers.LocationMarkersFragment">
+    android:background="@color/sampleApp_darkBlue">
 
-    <Button
-        android:id="@+id/get_marker_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background = "@drawable/round_long_button"
-        android:textSize = "13sp"
-        android:text="Get Location Markers"
-        android:layout_margin="16dp" />
+    <androidx.appcompat.widget.LinearLayoutCompat
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/location_marker_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </androidx.recyclerview.widget.RecyclerView>
-</androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_height="match_parent"
+
+        android:orientation="vertical"
+        tools:context=".ui.fragments.location.LocationMarkersFragment">
+
+        <Button
+            android:id="@+id/get_marker_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@drawable/round_long_button"
+            android:text="Get Location Markers"
+            android:textSize="13sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/location_marker_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/downloadOverlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/transparentGrey"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/progressText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_label_download_asset"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@id/progressView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
