--- a/surface-ar-sample/src/main/res/navigation/nav_graph.xml
+++ b/surface-ar-sample/src/main/res/navigation/nav_graph.xml
@@ -39,9 +39,14 @@
         android:id="@+id/activity_surface_ar"
         android:name="com.iar.surface_ar_sample.ui.activities.SurfaceARActivity"
         android:label="@string/label_surface_ar_view" />
+
     <fragment
         android:id="@+id/locationMarkersFragment"
-        android:name="com.iar.surface_ar_sample.ui.fragments.markers.LocationMarkersFragment"
+        android:name="com.iar.surface_ar_sample.ui.fragments.location.LocationMarkersFragment"
         android:label="location_markers_fragment"
-        tools:layout="@layout/location_markers_fragment" />
+        tools:layout="@layout/location_markers_fragment" >
+        <action
+            android:id="@+id/action_locationMarkersFragment_to_activity_surface_ar"
+            app:destination="@id/activity_surface_ar" />
+    </fragment>
 </navigation>
