--- a/surface-ar-sample/src/main/res/values/dimens.xml
+++ b/surface-ar-sample/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="dimen_activity_edge">24dp</dimen>
     <dimen name="dimen_corner_round">50dp</dimen>
     <dimen name="dimen_button_20">20dp</dimen>
+    <dimen name="dimen_border_round">10dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="message_text_size">14sp</dimen>
+    <dimen name="large_margin">16dp</dimen>
 </resources>
