--- a/core-sample/src/main/res/values/styles.xml
+++ b/core-sample/src/main/res/values/styles.xml
@@ -18,4 +18,14 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="main_button_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_activity_edge</item>
+        <item name="iconGravity">textStart</item>
+        <item name="cornerRadius">@dimen/dimen_corner_round</item>
+
+    </style>
 </resources>
