--- a/core-sample/src/main/res/layout/fragment_location_markers.xml
+++ b/core-sample/src/main/res/layout/fragment_location_markers.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,10 +11,18 @@
         android:id="@+id/get_marker_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background = "@drawable/round_long_button"
-        android:textSize = "13sp"
-        android:text="Get Location Markers"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:background="@drawable/round_long_button"
+        android:text="@string/get_location_markers"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/marker_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/white">
+    </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/location_marker_list"
