--- a/core-sample/src/main/res/layout/marker_item.xml
+++ b/core-sample/src/main/res/layout/marker_item.xml
@@ -41,9 +41,47 @@
         android:lineSpacingExtra="8dp"
         android:textColor="@color/lightGrey"
         android:textIsSelectable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/marker_image"
         app:layout_constraintTop_toBottomOf="@+id/marker_name" />
+
+    <RelativeLayout
+        android:id="@+id/nearby"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/marker_id">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/nearby"
+            android:textColor="@color/white"
+            android:textStyle="bold">
+        </TextView>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/take_me_button"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:layoutDirection="rtl"
+            android:text="@string/take_me_there"
+            android:textAllCaps="false"
+            app:cornerRadius="8dp"
+            app:icon="@drawable/ic_baseline_near_me_24">
+
+        </com.google.android.material.button.MaterialButton>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
