--- a/core-sample/src/main/res/layout/on_demand_markers_fragment.xml
+++ b/core-sample/src/main/res/layout/on_demand_markers_fragment.xml
@@ -8,6 +8,15 @@
     android:orientation="vertical"
     tools:context=".ui.fragments.markers.OnDemandMarkersFragment">
 
+    <Button
+        android:id="@+id/get_marker_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background = "@drawable/round_long_button"
+        android:textSize = "13sp"
+        android:text="@string/get_marker_by_id"
+        android:layout_margin="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/onDemand_marker_list"
         android:layout_width="match_parent"
